tests/fixtures/invalid/pow_float_dict.py
# Cannot call pow() with Float, Dict[str, int]
x = pow(1.0, {"a": 1})
